--- a/index.html
+++ b/index.html
@@ -329,17 +329,18 @@
       </div>
 
       <div class="section-title">Export final results</div>
-      <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:14px;">
-        <button type="button" onclick="exportWinnersCSV()"
-          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
-          Show Winners Export
-        </button>
+<div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:14px;">
+  <button type="button" onclick="exportWinnersOnline()"
+    style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+    Show Winners Export
+  </button>
 
-        <button type="button" onclick="exportAllShowCSV()"
-          style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
-          ALL SHOW RESULTS
-        </button>
-      </div>
+  <button type="button" onclick="exportAllOnline()"
+    style="padding:12px 14px; border-radius:12px; border:1px solid #d1d5db; background:#fff; font-weight:900; cursor:pointer;">
+    ALL SHOW RESULTS
+  </button>
+</div>
+
 
       <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:12px;">
         <button type="button" onclick="backToJudgingFromResults()"
@@ -404,7 +405,7 @@
   </div>
 
   <!-- cache-bust -->
-  <script src="app.js?v=12008"></script>
+  <script src="app.js?v=13000"></script>
 </body>
 </html>
 
