--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   </div>
 
   <!-- JUDGING SCREEN -->
-  <div id="judgingScreen" style="display:none; height:100vh; overflow:auto; padding:20px;">
+  <div id="judgingScreen" style="display:none; height:100vh; overflow:auto; padding:20px; background:#eef2ff;">
     <h1>🐔 Orpington Judging</h1>
 
     <p class="subline">Show: <strong><span id="showNameDisplay">Not selected</span></strong></p>
@@ -300,7 +300,7 @@
   </div>
 
   <!-- RESULTS SCREEN -->
-  <div id="resultsScreen" style="display:none; height:100vh; overflow:auto; padding:20px;">
+  <div id="resultsScreen" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
     <h1>🏆 Results</h1>
 
     <p class="subline">Show: <strong><span id="resultsShowName">-</span></strong></p>
@@ -359,7 +359,7 @@
   </div>
 
   <!-- BEST IN CLASS PAGE -->
-  <div id="bestClassPage" style="display:none; height:100vh; overflow:auto; padding:20px;">
+  <div id="bestClassPage" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
     <h1>🏆 Best in Class (Top 5)</h1>
 
     <div style="margin-bottom:12px;">
@@ -375,7 +375,7 @@
   </div>
 
   <!-- BEST IN VARIETY PAGE -->
-  <div id="bestVarietyPage" style="display:none; height:100vh; overflow:auto; padding:20px;">
+  <div id="bestVarietyPage" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
     <h1>🏆 Best in Variety (Top 3)</h1>
 
     <div style="margin-bottom:12px;">
@@ -391,7 +391,7 @@
   </div>
 
   <!-- BEST IN BREED PAGE -->
-  <div id="bestBreedPage" style="display:none; height:100vh; overflow:auto; padding:20px;">
+  <div id="bestBreedPage" style="display:none; height:100vh; overflow:auto; padding:20px; background:#ffffff;">
     <h1>🏆 Best in Breed</h1>
 
     <div style="margin-bottom:12px;">
