--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Orpington Judging</title>
 
   <link rel="manifest" href="manifest.json" />
-  <!-- <link rel="stylesheet" href="style.css" /> -->
+  <link rel="stylesheet" href="style.css" />
 
   <style>
     html, body { margin:0; padding:0; height:100%; overflow:hidden; font-family: Arial, sans-serif; }
