--- a/index.html
+++ b/index.html
@@ -242,6 +242,219 @@
   border:none !important;
 }
 
+    /* ================================
+   PREMIUM THEME (ALL SCREENS)
+   CSS-only — no logic changes
+   Paste at END of <style>
+==================================*/
+
+:root{
+  --bg0:#0b1220;
+  --bg1:#0f1b3a;
+  --bg2:#122a63;
+
+  --glass: rgba(255,255,255,0.10);
+  --glass2: rgba(255,255,255,0.14);
+  --stroke: rgba(255,255,255,0.18);
+
+  --text:#eef2ff;
+  --muted: rgba(238,242,255,0.78);
+
+  --brand:#facc15;
+  --brandText:#0b1220;
+
+  --teal:#14b8a6;
+  --danger:#ef4444;
+
+  --shadow: 0 18px 45px rgba(0,0,0,0.35);
+  --shadow2: 0 10px 22px rgba(0,0,0,0.25);
+
+  --r12:12px;
+  --r14:14px;
+  --r16:16px;
+  --r18:18px;
+}
+
+/* Base typography */
+html, body{
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji" !important;
+  letter-spacing: -0.01em;
+}
+
+/* Premium background for the app */
+body{
+  background:
+    radial-gradient(1200px 700px at 20% 10%, rgba(250,204,21,0.10), transparent 55%),
+    radial-gradient(1100px 650px at 80% 25%, rgba(20,184,166,0.10), transparent 55%),
+    linear-gradient(180deg, var(--bg0), var(--bg1) 60%, var(--bg2)) !important;
+  color: var(--text) !important;
+}
+
+/* -------------------------------
+   HOME / SHOW / JUDGE / CLASS
+   (.screen-blue)
+--------------------------------*/
+.screen-blue{
+  background: transparent !important;  /* overrides your old blue */
+  color: var(--text) !important;
+  padding: 28px 16px !important;
+  position: relative;
+}
+
+.screen-blue::before{
+  content:"";
+  position:absolute; inset:-2px;
+  background:
+    radial-gradient(900px 520px at 20% 15%, rgba(250,204,21,0.16), transparent 60%),
+    radial-gradient(900px 520px at 80% 22%, rgba(20,184,166,0.14), transparent 60%);
+  pointer-events:none;
+  z-index:0;
+}
+
+.screen-blue > *{ position:relative; z-index:1; } /* keep content above glow */
+
+/* Headings */
+.screen-blue h1{
+  letter-spacing:-0.03em;
+  text-shadow: 0 10px 24px rgba(0,0,0,0.25);
+}
+
+/* Intro image polish */
+#introScreen img{
+  border-radius: 22px !important;
+  box-shadow: var(--shadow) !important;
+  border: 1px solid rgba(255,255,255,0.18) !important;
+}
+
+/* -------------------------------
+   COLOUR SCREEN (#colourScreen)
+   (it has inline bg — override it)
+--------------------------------*/
+#colourScreen{
+  background: transparent !important;
+  color: var(--text) !important;
+}
+
+/* Colour scroll box */
+#colourScrollBox{
+  background: var(--glass) !important;
+  border: 1px solid var(--stroke) !important;
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08) !important;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+/* -------------------------------
+   INPUTS / SELECTS (ALL SCREENS)
+--------------------------------*/
+.input-wide,
+select.input-wide,
+input[type="text"],
+textarea,
+select{
+  background: rgba(255,255,255,0.10) !important;
+  color: var(--text) !important;
+  border: 1px solid rgba(255,255,255,0.16) !important;
+  border-radius: var(--r14) !important;
+  box-shadow: 0 8px 18px rgba(0,0,0,0.18) !important;
+  outline: none !important;
+}
+
+textarea::placeholder,
+input::placeholder{
+  color: rgba(238,242,255,0.55) !important;
+}
+
+/* Make dropdown options readable */
+select option{ color:#111827; }
+
+/* -------------------------------
+   BUTTONS (global)
+--------------------------------*/
+button, .btn-yellow, .btn-white, .pill{
+  -webkit-tap-highlight-color: transparent;
+  transition: transform .08s ease, filter .12s ease;
+}
+
+/* Primary (yellow) */
+.btn-yellow{
+  background: linear-gradient(180deg, #fde047, var(--brand)) !important;
+  color: var(--brandText) !important;
+  border: 1px solid rgba(0,0,0,0.18) !important;
+  border-radius: 16px !important;
+  font-weight: 900 !important;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25) !important;
+}
+.btn-yellow:active{ transform: scale(0.98); filter: brightness(0.98); }
+
+/* Secondary / “glass” buttons (your many inline background:#fff buttons) */
+button{
+  background: rgba(255,255,255,0.10) !important;
+  color: var(--text) !important;
+  border: 1px solid rgba(255,255,255,0.18) !important;
+  border-radius: var(--r14) !important;
+  font-weight: 900 !important;
+  box-shadow: var(--shadow2) !important;
+}
+button:active{ transform: scale(0.99); }
+
+/* Pills (Class/Colour choices) */
+.pill{
+  background: rgba(255,255,255,0.12) !important;
+  color: var(--text) !important;
+  border: 1px solid rgba(255,255,255,0.18) !important;
+  border-radius: 999px !important;
+  font-weight: 950 !important;
+  box-shadow: 0 10px 18px rgba(0,0,0,0.18) !important;
+}
+.pill:active{ transform: scale(0.98); }
+
+/* Danger button */
+.danger{
+  background: linear-gradient(180deg, #f87171, #ef4444) !important;
+  color:#fff !important;
+  border:none !important;
+  border-radius: 14px !important;
+  font-weight: 900 !important;
+  box-shadow: 0 12px 24px rgba(239,68,68,0.25) !important;
+}
+
+/* -------------------------------
+   CARDS / RESULTS / WINNERS
+--------------------------------*/
+.card{
+  background: var(--glass) !important;
+  border: 1px solid var(--stroke) !important;
+  border-radius: var(--r18) !important;
+  box-shadow: var(--shadow) !important;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+.winner-card{
+  background: var(--glass) !important;
+  border: 1px solid var(--stroke) !important;
+  color: var(--text) !important;
+  border-radius: var(--r18) !important;
+}
+
+.winner-title{ color: var(--text) !important; }
+.subline{ color: var(--muted) !important; }
+.section-title{ color: var(--text) !important; opacity:0.9 !important; }
+
+/* Make “white page backgrounds” dark too */
+#judgingScreen, #resultsScreen, #bestClassPage, #bestVarietyPage, #bestBreedPage{
+  background: transparent !important;
+  color: var(--text) !important;
+}
+
+/* Small responsive polish */
+@media (max-width: 420px){
+  .btn-yellow{ padding:18px 24px !important; font-size:18px !important; }
+  #introScreen img{ max-width: 86% !important; }
+}
+
+
   </style>
 </head>
 
@@ -528,7 +741,7 @@
   </div>
 
   <!-- cache-bust -->
-  <script src="app.js?v=13003"></script>
+  <script src="app.js?v=13004"></script>
 </body>
 </html>
 
