--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Orpington Judging</title>
 
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=13004" />
+
 
   <style>
     html, body { margin:0; padding:0; height:100%; overflow:hidden; font-family: Arial, sans-serif; }
@@ -511,6 +512,41 @@ button:active{ transform: scale(0.99); }
 .muted{
   opacity: 0.75 !important;
 }
+/* =========================
+   FORCE DQ + CARD TEXT VISIBLE
+   Works with or without CSS variables
+========================= */
+
+/* Make ALL text inside cards readable (no faded opacity) */
+.card, .card * ,
+.winner-card, .winner-card * ,
+.dq-box, .dq-box * {
+  opacity: 1 !important;
+}
+
+/* DQ text + labels: force strong color with fallback */
+.dq-box,
+.dq-box label,
+.dq-box select,
+.dq-box input,
+.dq-box textarea,
+.dq-box option {
+  color: var(--text, #111827) !important;  /* dark theme uses --text, old theme falls back to black */
+  font-weight: 900 !important;
+}
+
+/* If you're on dark theme, keep DQ box readable */
+.dq-box {
+  background: rgba(255,255,255,0.10) !important;
+  border: 1px solid rgba(255,255,255,0.18) !important;
+}
+
+/* Fix the "Disqualified" label specifically */
+label[for="dqToggle"],
+#dqToggle,
+#dqToggle * {
+  opacity: 1 !important;
+}
 
 
   </style>
@@ -799,7 +835,7 @@ button:active{ transform: scale(0.99); }
   </div>
 
   <!-- cache-bust -->
-  <script src="app.js?v=13005"></script>
+  <script src="app.js?v=13004"></script>
 </body>
 </html>
 
