--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@ label[for="dqToggle"],
     <img src="orpington.png" alt="Orpington"
       style="max-width:72%; border-radius:18px; margin:18px 0 26px; box-shadow:0 10px 25px rgba(0,0,0,0.4);" />
 
-    <button class="btn-yellow" onclick="startApp()">Start Judging</button>
+    <button class="btn-yellow" onclick="alert('Click works ✅'); startApp();">Start Judging</button>
 
 <button class="btn-white" onclick="startAdmin()" style="margin-top:12px;">
   Admin
